Seed both databases correctly

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build_client": "webpack",
     "seed": "node database-mongo/seed.js",
     "generateData": "node helper/dataGeneration.js",
-    "seedMongo": "mongoimport --db=images --collection=images --type=csv --headerline --file=images.csv"
+    "seedMongo": "mongoimport --db=images --collection=images --type=csv --headerline --file=images.csv && mongoimport --db=images --collection=urls --type=csv --headerline --file=sizeurls.csv"
   },
   "author": "",
   "license": "ISC",
