--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jquery": "^3.5.1",
     "mongoose": "^5.9.18",
     "morgan": "^1.10.0",
+    "newrelic": "^6.13.0",
     "pg": "^8.3.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
