--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "artillery": "^1.6.1",
     "axios": "^0.19.2",
     "cors": "^2.8.5",
     "csv-write-stream": "^2.0.0",
