--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "newrelic": "^6.13.0",
     "pg": "^8.3.3",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "redis": "^3.0.2",
+    "redis-server": "^1.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
